# CodeScout

./: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: ingest.py
backend/app/db/: database.py
backend/app/generator/: benchmark.py  generator.py  skillfile.py
backend/app/ingestion/: bm25.py  embedder.py  parser.py  vector_store.py
backend/app/models/: db.py  schema.py
backend/app/utils/: utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnswerPanel.tsx  BenchmarkModal.tsx  ChatMessage.tsx  CodeChunkCard.tsx  DevLogger.tsx  Landing.tsx  SkillFileModal.tsx
frontend/src/context/: LoggerContext.tsx
tests/fixtures/: sample.go  sample.java  sample.js  sample.kt  sample.py  sample.rb  sample.rs  sample.ts
tests/integration/: conftest.py  test_ingestion.py  test_pipeline.py  test_query.py
tests/unit/: test_parser.py
