[project]
name = "codescout"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "pydantic",
    "gitpython",
    "tree-sitter",
    "tree-sitter-python",
    "tree-sitter-java",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-go",
    "tree-sitter-rust",
    "tree-sitter-ruby",
    "tree-sitter-kotlin",
    "google-genai>=1.73.0",
    "pgvector",
    "psycopg2-binary",
    "python-dotenv",
    "sqlmodel",
    "rank-bm25",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[tool.fastapi]
entrypoint = "backend.app.main:app"
